# snake-tch-rs

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  game.rs  main.rs  model.rs  utils.rs
